--- a/resources/blocks/full_width_image/_full_width_image.antlers.html
+++ b/resources/blocks/full_width_image/_full_width_image.antlers.html
@@ -10,13 +10,13 @@
         {{ partial:statamic-peak-tools::components/picture :image="block:image" aspect_ratio="2/1 large:3/1" cover="true" lazy="true" sizes="100vw" }}
     </figure>
 
-    {{ if block:title || block:text || block:buttons }}
-    <div class="row-start-1 span-full inset-0 bg-primary/80 mix-blend-multiply" aria-hidden="true">
-    </div>
+    {{ if block:heading || block:text || block:buttons }}
+        <div class="row-start-1 span-full inset-0 bg-primary/80 mix-blend-multiply" aria-hidden="true">
+        </div>
     {{ /if }}
 
     <article class="row-start-1 isolate span-content md:col-start-[col-3] md:col-span-8 stack-4 py-12 md:py-16 lg:py-24">
-        {{ title ?= { partial:typography/h2 :content="block:title" color="text-white" class="text-center" } }}
+        {{ heading ?= { partial:typography/h2 :content="block:heading" color="text-white" class="text-center" } }}
         {{ text ?= { partial:typography/p :content="block:text" color="text-white" class="text-center" } }}
         {{ partial:components/buttons inverted="true" class="justify-center" }}
     </article>
