--- a/resources/blocks/text_columns/_text_columns.antlers.html
+++ b/resources/blocks/text_columns/_text_columns.antlers.html
@@ -7,7 +7,7 @@
 <!-- /page_builder/_text_columns.antlers.html -->
 {{ partial:page_builder/block }}
     <div class="span-content">
-        {{ block:title ?= { partial:typography/h3 as="h2" :content="block:title" class="mb-2 md:max-w-[1/2]" } }}
+        {{ block:heading ?= { partial:typography/h3 as="h2" :content="block:heading" class="mb-2 md:max-w-[1/2]" } }}
 
         {{ partial:typography/prose class="md:columns-2 gap-6 md:[&>ul]:inline-block md:[&>ul]:!mt-0 md:[&>ul]:mb-5 md:[&>ul]:break-inside-avoid md:[&>ol]:inline-block md:[&>ol]:!mt-0 md:[&>ol]:mb-5 md:[&>ol]:break-inside-avoid md:[&>p]:!mt-0
         " }}
