Replace picture partial with picture tag

--- a/resources/blocks/columns/_columns.antlers.html
+++ b/resources/blocks/columns/_columns.antlers.html
@@ -17,8 +17,8 @@
                     )}}
                 "
             >
-                {{ partial
-                    src="statamic-peak-tools::components/picture"
+                {{
+                    picture
                     sizes="
                         { switch(
                             (total_results == 1) => '(min-width: 1280px) 1150px, 90vw',
