--- a/resources/blocks/images_grid/_images_grid.antlers.html
+++ b/resources/blocks/images_grid/_images_grid.antlers.html
@@ -16,8 +16,8 @@
                         (total_results == 3) => 'md:col-span-4',
                     )}}
                 ">
-                    {{ partial
-                        src="statamic-peak-tools::components/picture"
+                    {{
+                        picture
                         :image="url"
                         sizes="
                             { switch(
