Remove redundant lazy parameter on picture tag

--- a/resources/blocks/full_width_image/_full_width_image.antlers.html
+++ b/resources/blocks/full_width_image/_full_width_image.antlers.html
@@ -7,7 +7,7 @@
 <!-- /page_builder/_full_width_image.antlers.html -->
 {{ partial:page_builder/block class="min-h-[14rem]" }}
     <figure class="row-start-1 span-full">
-        {{ picture :image="block:image" aspect_ratio="2/1 large:3/1" cover="true" lazy="true" sizes="100vw" }}
+        {{ picture :image="block:image" aspect_ratio="2/1 large:3/1" cover="true" sizes="100vw" }}
     </figure>
 
     {{ if block:heading || block:text || block:buttons }}
