--- a/resources/blocks/image_and_text/_image_and_text.antlers.html
+++ b/resources/blocks/image_and_text/_image_and_text.antlers.html
@@ -7,7 +7,7 @@
 <!-- /page_builder/_image_and_text.antlers.html -->
 {{ partial:page_builder/block class="gap-y-8 items-center grid-flow-col" }}
     <article class="span-content md:col-span-6 stack-4 {{ image_position == 'left' ? 'md:col-start-[col-7]' : 'md:col-start-[content-start]' }}">
-        {{ block:title ?= { partial:typography/h2 :content="block:title" } }}
+        {{ block:heading ?= { partial:typography/h2 :content="block:heading" } }}
 
         {{ partial:typography/prose }}
             {{ block:text }}
@@ -17,7 +17,7 @@
     </article>
 
     <figure class="span-content md:col-span-6 {{ image_position == 'left' ? 'md:col-start-[content-start]' : 'md:col-start-[col-7]' }}">
-        {{ partial:statamic-peak-tools::components/picture :image="block:image" cover="true" sizes="(min-width: 1280px) 640px, (min-width: 768px) 50vw, 90vw" }}
+        {{ picture :image="block:image" cover="true" sizes="(min-width: 1280px) 640px, (min-width: 768px) 50vw, 90vw" }}
     </figure>
 {{ /partial:page_builder/block }}
 <!-- End: /page_builder/_image_and_text.antlers.html -->
